# cmakeProject

./: README.md
cmakeDemo/: CMakeLists.txt
cmakeDemo/cmake/modules/: AddCodeFile.cmake
cmakeDemo/code/: CMakeLists.txt
cmakeDemo/code/include/dll/algorithm/: i_algorithm.h
cmakeDemo/code/include/dll/thread/: i_thread.h
cmakeDemo/code/include/lib/print/: i_lib_print.h
cmakeDemo/code/include/main/: i_mainservice.h
cmakeDemo/code/source/: CMakeLists.txt
cmakeDemo/code/source/.node/: CMakeLists.txt
cmakeDemo/code/source/.node/cplusExtension/: CMakeLists.txt  export.cpp  myAddon.cpp  myAddon.h  myAsyncWorker.cpp  myAsyncWorker.h
cmakeDemo/code/source/dll/: CMakeLists.txt
cmakeDemo/code/source/dll/algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h
cmakeDemo/code/source/dll/common/: CMakeLists.txt  common_utitly.h  print.cpp  print.h
cmakeDemo/code/source/dll/script/: CMakeLists.txt
cmakeDemo/code/source/dll/script/application/: CMakeLists.txt  application.cpp  application.h
cmakeDemo/code/source/dll/script/modeldb/: CMakeLists.txt
cmakeDemo/code/source/dll/script/realtimedb/: CMakeLists.txt  i_realtime.h  realtime.cpp  realtime.h
cmakeDemo/code/source/dll/thread/: CMakeLists.txt  basic_thread.cpp  basic_thread.h  thread.cpp  thread.h
cmakeDemo/code/source/dll/thread/convert/: lock_thread.h
cmakeDemo/code/source/lib/: CMakeLists.txt
cmakeDemo/code/source/lib/designMode/: CMakeLists.txt  simpleFactory.cpp  simpleFactory.h
cmakeDemo/code/source/lib/designMode/simpleDemo/bridgingMode/: circle.h  rectangle.cpp
cmakeDemo/code/source/lib/designMode/simpleDemo/bridgingModel/: circle.cpp  drawBlack.cpp  drawBlack.h  drawRed.cpp  drawRed.h  i_draw.h  i_shape.h  rectangle.h
cmakeDemo/code/source/lib/designMode/simpleDemo/builderModel/: simpleDemoBuilderDirector.h  simpleDemoBuilderModelAbstractTeacherBuild.h  simpleDemoBuilderModelChineseTeacherBuild.h  simpleDemoBuilderModelMathTeacherBuild.h  simpleDemoBuilderModelTeacher.h
cmakeDemo/code/source/lib/designMode/simpleDemo/decoratorModel/: i_simpleDemoDecorator.cpp  i_simpleDemoDecorator.h  simpleDemoDecorator.cpp  simpleDemoDecorator.h  simpleDemoDecoratorBasketBallGame.cpp  simpleDemoDecoratorBasketBallGame.h  simpleDemoDecoratorCarGame.cpp  simpleDemoDecoratorCarGame.h  simpleDemoDecoratorFootBallGame.cpp  simpleDemoDecoratorFootBallGame.h  simpleDemoDecoratorLolGame.cpp  simpleDemoDecoratorLolGame.h
cmakeDemo/code/source/lib/designMode/simpleDemo/observerModel/: simpleDemoObserverBase.cpp  simpleDemoObserverBase.h  simpleDemoObserverFirstChild.cpp  simpleDemoObserverFirstChild.h  simpleDemoObserverNotifyManager.cpp  simpleDemoObserverNotifyManager.h  simpleDemoObserverSecondChild.cpp  simpleDemoObserverSecondChild.h
cmakeDemo/code/source/lib/designMode/simpleDemo/prototypeModel/: simpleDemoPrototypeBase.h  simpleDemoPrototypeChild.h
cmakeDemo/code/source/lib/designMode/simpleDemo/simpleFactory/: factory.h  footballFactory.cpp  footballFactory.h  footballProduct.cpp  footballProduct.h  lolFactory.cpp  lolFactory.h  lolProduct.cpp  lolProduct.h  product.h  simpleFactory.cpp  simpleFactory.h
cmakeDemo/code/source/lib/designMode/simpleDemo/strategyPattern/: simpleDemoAdd.cpp  simpleDemoAdd.h  simpleDemoCalculation.cpp  simpleDemoCalculation.h  simpleDemoSub.cpp  simpleDemoSub.h
cmakeDemo/code/source/lib/designMode/simpleDemo/templateMethod/: simpleDemoBasketballGame.cpp  simpleDemoBasketballGame.h  simpleDemoFootballGame.cpp  simpleDemoFootballGame.h  simpleDemoGame.cpp  simpleDemoGame.h
cmakeDemo/code/test/: CMakeLists.txt  main.cpp  processTest.cpp  processTest.h
cmakeDemo/code/test/dllTest/: algorithmTest.cpp  algorithmTest.h  commonTest.cpp  commonTest.h  componentTest.cpp  componentTest.h  my_thread_pool_test.h  my_thread_pool_v1_test.h  my_thread_pool_v2_test.cpp  my_thread_pool_v2_test.h  my_thread_pool_v3_handwrite_test.cpp  my_thread_pool_v3_handwrite_test.h  threadTest.cpp  threadTest.h
cmakeDemo/code/test/libTest/: designModelTest.cpp  designModelTest.h
cmakeDemo/code/test/libTest/designModel/: simpleDemoDesignModelTest.cpp  simpleDemoDesignModelTest.h
cmakeDemo/code/test/nodeTest/: nodeTest.cpp  nodeTest.h
cmakeDemo/code/test/stlTest/: stlTest.cpp  stlTest.h
cmakeDemo/framework/: CMakeLists.txt
cmakeDemo/framework/include/common/component/: component_register.h  i_component.h  i_component_manager.h
cmakeDemo/framework/include/common/service/: i_service.h  i_service_manager.h
cmakeDemo/framework/source/: CMakeLists.txt
cmakeDemo/framework/source/common/component/: component_manager.cpp  component_manager.h
cmakeDemo/framework/source/common/service/: service_manager.cpp  service_manager.h
cmakeDemo/framework/source/common/utitly/: common.h  framework_common_utitly.cpp  framework_common_utitly.h
