CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(wellinos8.0)

list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
INCLUDE(AddCodeFile)
MESSAGE("system version: ${CMAKE_SYSTEM_VERSION}")

SET(CODE_BUILD_PATH "${PROJECT_SOURCE_DIR}/code")
SET(THIRD_PARTY_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/thirdParty")




SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/win64/${CMAKE_BUILD_TYPE}")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/win64/${CMAKE_BUILD_TYPE}")
SET(TARGET_BIN_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/win64/${CMAKE_BUILD_TYPE}")
SET(TARGET_LIB_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/win64/${CMAKE_BUILD_TYPE}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

OPTION(BUILD_ADD_FLAG "BUILD_ADD_FLAG" OFF)

IF(BUILD_ADD_FLAG)

    ADD_SUBDIRECTORY(sdk)
ENDIF(BUILD_ADD_FLAG)

 ADD_SUBDIRECTORY(code)