CMAKE_MINIMUM_REQUIRED(VERSION 3.8)



OPTION(DLL_OPEN_FLAG "dll" ON)
OPTION(LIB_OPEN_FLAG "lib" ON)
OPTION(NODE_OPEN_FLAG ".node" ON)

IF(DLL_OPEN_FLAG)
 ADD_SUBDIRECTORY(dll)
ENDIF(DLL_OPEN_FLAG)

IF(LIB_OPEN_FLAG)
 ADD_SUBDIRECTORY(lib)
ENDIF(LIB_OPEN_FLAG)

IF(NODE_OPEN_FLAG)
 ADD_SUBDIRECTORY(.node)
ENDIF(NODE_OPEN_FLAG)
