CMAKE_MINIMUM_REQUIRED(VERSION 3.8)



OPTION(BUILD_DLL_OPEN_FLAG "dll" ON)
OPTION(BUILD_LIB_OPEN_FLAG "lib" ON)
OPTION(BUILD_NODE_OPEN_FLAG ".node" ON)

IF(BUILD_DLL_OPEN_FLAG)
 ADD_SUBDIRECTORY(dll)
ENDIF(BUILD_DLL_OPEN_FLAG)

IF(BUILD_LIB_OPEN_FLAG)
 ADD_SUBDIRECTORY(lib)
ENDIF(BUILD_LIB_OPEN_FLAG)

IF(BUILD_NODE_OPEN_FLAG)
 ADD_SUBDIRECTORY(.node)
ENDIF(BUILD_NODE_OPEN_FLAG)
