CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

SET(TARGET processTest)
SET(TARGET_FOLDER_PATH "code")


INCLUDE_DIRECTORIES(${CODE_TEST_PATH}/dllTest)
INCLUDE_DIRECTORIES(${CODE_TEST_PATH}/libTest)
INCLUDE_DIRECTORIES(${CODE_TEST_PATH}/nodeTest)
INCLUDE_DIRECTORIES(${CODE_TEST_PATH}/stlTest)

INCLUDE_DIRECTORIES(${FRAMEWORK_SOURCE_COMPONENT_PATH})
#INCLUDE_DIRECTORIES(${FRAMEWORK_PUBLIC_COMPONENT_PATH})


SET(ALL_SOURCES ${RESOURCE} "")
ADD_SOURCE_FILE_LIST(ALL_SOURCES ${CODE_TEST_PATH})


list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_EXECUTABLE(${TARGET} ${ALL_SOURCES})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})


ADD_DEPENDENCIES(${TARGET} common)
ADD_DEPENDENCIES(${TARGET} algorithm)
ADD_DEPENDENCIES(${TARGET} thread)
ADD_DEPENDENCIES(${TARGET} designMode)
ADD_DEPENDENCIES(${TARGET} frameworkCommon)


TARGET_LINK_LIBRARIES(${TARGET} common)
TARGET_LINK_LIBRARIES(${TARGET} algorithm)
TARGET_LINK_LIBRARIES(${TARGET} thread)
TARGET_LINK_LIBRARIES(${TARGET} designMode)
TARGET_LINK_LIBRARIES(${TARGET} frameworkCommon)


