CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

SET(TARGET frameworkCommon)
SET(TARGET_FOLDER_PATH "framework")


INCLUDE_DIRECTORIES(${FRAMEWORK_SOURCE_UTITLY_PATH})
INCLUDE_DIRECTORIES(${FRAMEWORK_INCLUDE_PATH}/common/component)
INCLUDE_DIRECTORIES(${FRAMEWORK_INCLUDE_PATH}/common/service)

SET(ALL_SOURCES ${RESOURCE} "")
ADD_SOURCE_FILE_LIST(ALL_SOURCES ${FRAMEWORK_SOURCE_PATH})
ADD_INCLUDE_FILE_LIST(ALL_SOURCES ${FRAMEWORK_INCLUDE_PATH})

list(APPEND ALL_SOURCES "CMakeLists.txt")


ADD_DEFINITIONS(-DFRAMEWORK_COMMON_API_FLAG)

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})




