CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


OPTION(COMMON_OPEN_FLAG "common" ON)
OPTION(ALGORITHM_OPEN_FLAG "algorithm" ON)
OPTION(THREAD_OPEN_FLAG "thread" ON)

IF(COMMON_OPEN_FLAG)
 ADD_SUBDIRECTORY(common)
ENDIF(COMMON_OPEN_FLAG)

IF(ALGORITHM_OPEN_FLAG)
 ADD_SUBDIRECTORY(algorithm)
ENDIF(ALGORITHM_OPEN_FLAG)

IF(THREAD_OPEN_FLAG)
 ADD_SUBDIRECTORY(thread)
ENDIF(THREAD_OPEN_FLAG)
