CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


OPTION(BUILD_COMMON_OPEN_FLAG "common" ON)
OPTION(BUILD_ALGORITHM_OPEN_FLAG "algorithm" ON)
OPTION(BUILD_THREAD_OPEN_FLAG "thread" ON)
OPTION(BUILD_SCRIPT_OPEN_FLAG "script" ON)

IF(BUILD_COMMON_OPEN_FLAG)
 ADD_SUBDIRECTORY(common)
ENDIF(BUILD_COMMON_OPEN_FLAG)

IF(BUILD_ALGORITHM_OPEN_FLAG)
 ADD_SUBDIRECTORY(algorithm)
ENDIF(BUILD_ALGORITHM_OPEN_FLAG)

IF(BUILD_THREAD_OPEN_FLAG)
 ADD_SUBDIRECTORY(thread)
ENDIF(BUILD_THREAD_OPEN_FLAG)

IF(BUILD_SCRIPT_OPEN_FLAG)
 ADD_SUBDIRECTORY(script)
ENDIF(BUILD_SCRIPT_OPEN_FLAG)