CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET cplusExtension)
SET(TARGET_FOLDER_PATH "code//.node")
SET(NODE_SOURCES_PATH "${CMAKE_CURRENT_SOURCE_DIR}")



INCLUDE_DIRECTORIES(${THIRD_PARTY_LIBRARY_PATH}/node)
INCLUDE_DIRECTORIES(${THIRD_PARTY_LIBRARY_PATH}/node-addon-api)


ADD_DEFINITIONS(-DNODEDEMO_API_FLAG)

#FILE(GLOB NodeDemo_HEADERS "${NodeDemo_SOURCES_PATH}/*.h")
#SOURCE_GROUP("include" FILES ${NodeDemo_HEADERS})

#FILE(GLOB NodeDemo_SOURCES "${NodeDemo_SOURCES_PATH}/*.cpp")
#SOURCE_GROUP("source" FILES ${NodeDemo_SOURCES})

#FILE(GLOB NodeDemo_PUBLIC_HEADERS "${NodeDemo_PUBLIC_INCLUDE_PATH}/*.h")
#SOURCE_GROUP("public" FILES ${NodeDemo_PUBLIC_HEADERS})

#SET(ALL_SOURCES
#   ${NodeDemo_SOURCES}
#   ${NodeDemo_HEADERS}
#   ${NodeDemo_PUBLIC_HEADERS}
#)

SET(ALL_SOURCES ${RESOURCE} "")

ADD_SOURCE_FILE_LIST(ALL_SOURCES ${NODE_SOURCES_PATH})

list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES} ${CMAKE_JS_SRC})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES PREFIX "" SUFFIX ".node")

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})


TARGET_LINK_LIBRARIES(${TARGET} ${THIRD_PARTY_LIBRARY_PATH}/node.lib)




