CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET algorithm)
SET(TARGET_FOLDER_PATH "code//dll")
SET(ALGORITHM_SOURCES_PATH "${CMAKE_CURRENT_SOURCE_DIR}")



ADD_DEFINITIONS(-DALGORITHM_API_FLAG)

#FILE(GLOB ALGORITHM_HEADERS "${ALGORITHM_SOURCES_PATH}/*.h")
#SOURCE_GROUP("include" FILES ${ALGORITHM_HEADERS})

#FILE(GLOB ALGORITHM_SOURCES "${ALGORITHM_SOURCES_PATH}/*.cpp")
#SOURCE_GROUP("source" FILES ${ALGORITHM_SOURCES})

#FILE(GLOB ALGORITHM_PUBLIC_HEADERS "${ALGORITHM_PUBLIC_INCLUDE_PATH}/*.h")
#SOURCE_GROUP("public" FILES ${ALGORITHM_PUBLIC_HEADERS})

#SET(ALL_SOURCES
#   ${ALGORITHM_SOURCES}
#   ${ALGORITHM_HEADERS}
#   ${ALGORITHM_PUBLIC_HEADERS}
#)

SET(ALL_SOURCES ${RESOURCE} "")

ADD_SOURCE_FILE_LIST(ALL_SOURCES ${ALGORITHM_SOURCES_PATH})
ADD_INCLUDE_FILE_LIST(ALL_SOURCES ${ALGORITHM_PUBLIC_PATH})
list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})