CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET common)
SET(TARGET_FOLDER_PATH "code//dll")
SET(COMMON_SOURCES_PATH "${CMAKE_CURRENT_SOURCE_DIR}")

ADD_DEFINITIONS(-DCOMMON_API_FLAG)

#FILE(GLOB COMMON_HEADERS "${COMMON_SOURCES_PATH}/*.h")
#SOURCE_GROUP("include" FILES ${COMMON_HEADERS})

#FILE(GLOB COMMON_SOURCES "${COMMON_SOURCES_PATH}/*.cpp")
#SOURCE_GROUP("source" FILES ${COMMON_SOURCES})

#FILE(GLOB COMMON_PUBLIC_HEADERS "${COMMON_PUBLIC_INCLUDE_PATH}/*.h")
#SOURCE_GROUP("public" FILES ${COMMON_PUBLIC_HEADERS})

#SET(ALL_SOURCES
#   ${COMMON_SOURCES}
#   ${COMMON_HEADERS}
#   ${COMMON_PUBLIC_HEADERS}
#)

SET(ALL_SOURCES ${RESOURCE} "")

ADD_SOURCE_FILE_LIST(ALL_SOURCES ${COMMON_SOURCES_PATH})
list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})


