CMAKE_MINIMUM_REQUIRED(VERSION 3.8)



OPTION(BUILD_APPLICATION_OPEN_FLAG "application" OFF)
OPTION(BUILD_MODELDB_OPEN_FLAG "modeldb" OFF)
OPTION(BUILD_REALTIMEDB_OPEN_FLAG "realtimedb" ON)

IF(BUILD_APPLICATION_OPEN_FLAG)
 ADD_SUBDIRECTORY(application)
ENDIF(BUILD_APPLICATION_OPEN_FLAG)

IF(BUILD_MODELDB_OPEN_FLAG)
 ADD_SUBDIRECTORY(modeldb)
ENDIF(BUILD_MODELDB_OPEN_FLAG)

IF(BUILD_REALTIMEDB_OPEN_FLAG)
 ADD_SUBDIRECTORY(realtimedb)
ENDIF(BUILD_REALTIMEDB_OPEN_FLAG)
