CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET thread)
SET(TARGET_FOLDER_PATH "code//dll")
SET(THREAD_SOURCES_PATH "${CMAKE_CURRENT_SOURCE_DIR}")


ADD_DEFINITIONS(-DTHREAD_API_FLAG)


#FILE(GLOB THREAD_HEADERS "${THREAD_SOURCES_PATH}/*.h")
#SOURCE_GROUP("include" FILES ${THREAD_HEADERS})

#FILE(GLOB THREAD_SOURCES "${THREAD_SOURCES_PATH}/*.cpp")
#SOURCE_GROUP("source" FILES ${THREAD_SOURCES})

#FILE(GLOB THREAD_PUBLIC_HEADERS "${THREAD_PUBLIC_INCLUDE_PATH}/*.h")
#SOURCE_GROUP("public" FILES ${THREAD_PUBLIC_HEADERS})

#SET(ALL_SOURCES
#   ${THREAD_SOURCES}
#   ${THREAD_HEADERS}
#   ${THREAD_PUBLIC_HEADERS}
#)

SET(ALL_SOURCES ${RESOURCE} "")
ADD_SOURCE_FILE_LIST(ALL_SOURCES ${THREAD_SOURCES_PATH})
ADD_INCLUDE_FILE_LIST(ALL_SOURCES ${THREAD_PUBLIC_PATH})
list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})
