CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET designMode)
SET(TARGET_FOLDER_PATH "code//lib")
SET(LIB_DESIGNMODEL_SOURCE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(${COMMON_SOURCE_PATH})

ADD_DEFINITIONS(-DTEST_API_FLAG)

#FILE(GLOB TEST_HEADERS "${LIB_DESIGNMODEL_SOURCE_PATH}/*.h")
#SOURCE_GROUP("include" FILES ${TEST_HEADERS})

#FILE(GLOB TEST_SOURCES "${LIB_DESIGNMODEL_SOURCE_PATH}/*.cpp")
#SOURCE_GROUP("source" FILES ${TEST_SOURCES})

#FILE(GLOB TEST_PUBLIC_HEADERS "${LIB_DESIGNMODEL_PUBLIC_PATH}/*.h")
#SOURCE_GROUP("public" FILES ${TEST_PUBLIC_HEADERS})

#SET(ALL_SOURCES
#   ${TEST_SOURCES}
#   ${TEST_HEADERS}
#   ${TEST_PUBLIC_HEADERS}
#)

SET(ALL_SOURCES ${RESOURCE} "")
ADD_SOURCE_FILE_LIST(ALL_SOURCES ${LIB_DESIGNMODEL_SOURCE_PATH})
ADD_INCLUDE_FILE_LIST(ALL_SOURCES ${LIB_DESIGNMODEL_PUBLIC_PATH})
list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} STATIC ${ALL_SOURCES})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})

ADD_DEPENDENCIES(${TARGET} common)


TARGET_LINK_LIBRARIES(${TARGET} common)