CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET application)
SET(TARGET_FOLDER_PATH "code//dll//script")
SET(APPLICATION_SOURCES_PATH "${CMAKE_CURRENT_SOURCE_DIR}")



ADD_DEFINITIONS(-DAPPLICATION_API_FLAG)


SET(ALL_SOURCES ${RESOURCE} "")

ADD_SOURCE_FILE_LIST(ALL_SOURCES ${APPLICATION_SOURCES_PATH})

list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})