CMAKE_MINIMUM_REQUIRED(VERSION 3.8)


SET(TARGET realtimedb)
SET(TARGET_FOLDER_PATH "code//dll//script")
SET(REALTIMEDB_SOURCES_PATH "${CMAKE_CURRENT_SOURCE_DIR}")



ADD_DEFINITIONS(-DALGORITHM_API_FLAG)


SET(ALL_SOURCES ${RESOURCE} "")

ADD_SOURCE_FILE_LIST(ALL_SOURCES ${REALTIMEDB_SOURCES_PATH})

list(APPEND ALL_SOURCES "CMakeLists.txt")

ADD_LIBRARY(${TARGET} SHARED ${ALL_SOURCES})

ADD_DEPENDENCIES(${TARGET} frameworkCommon)


TARGET_LINK_LIBRARIES(${TARGET} frameworkCommon)

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER ${TARGET_FOLDER_PATH})